
* TODO Version 1.0
  [2013-02-21 Do 01:24]

** TODO change version number
   [2013-02-21 Do 01:27]
** TODO announce in org-mode mailing-list
   [2013-02-21 Do 01:28]
** TODO announce in emacs mailing-list
 [2013-02-21 Do 01:24]


* NEXT Version 0.9
  [2013-02-21 Do 01:24]

** TODO turn off fontification of matches???
   [2013-02-21 Do 01:32]
** TODO global command: go-back-to-navi-buffer (at marker-position)
   [2013-02-21 Do 01:30]
** TODO implement actualization hook for navi-buffers (always-up-to-date)
   [2013-02-21 Do 01:29]
** TODO implement narrow/widen
   [2013-02-21 Do 01:27]
** TODO implement predefined queries with 1key keybindings
   [2013-02-21 Do 01:27]
** TODO connect navi-buffer and principal buffer (markers)
   [2013-02-21 Do 01:26]
** TODO make occur-buffers permanent (-> navi-buffer)
   [2013-02-21 Do 01:26]
** TODO announce in org-mode mailing-list
[2013-02-21 Do 01:25]
** TODO announce in emacs mailing-list
  [2013-02-21 Do 01:24]